BUG FIX (argos_master): fixed wrong positioning of elements in cards

--- a/argos/argos_master/argos_master/gui/static/scss/main.scss
+++ b/argos/argos_master/argos_master/gui/static/scss/main.scss
@@ -416,7 +416,7 @@ $navbar-active-item-underline: $main-color;
 
     .card-body {
       &[data-title=""][data-description=""][data-action=""] {
-        display: none;
+        display: none !important;
       }
     }
   }
